--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App 0.1</title>
     <link rel="stylesheet" href="./css/main.css">
+    <!-- favicon error -->
+    <link rel="shortcut icon" href="#" />
 </head>
 
 <body>
@@ -14,7 +16,7 @@
         <section class="weather-info" id="mainCointainer">
             <div class="weather-info__search-view" id="weatherSearchView">
                 <label class="weather-info__search__label" for="searchInput">Check weather:</label>
-                <input type="text" id="serachInput">
+                <input type="text" id="searchInput">
                 <button id="searchButton">Search</button>
             </div>
 
@@ -35,7 +37,7 @@
             </div>
         </section>
     </main>
-
+    <script src="src/main.js" type="module"></script>
 </body>
 
 </html>
