Complete version 1.0. Basic functionality works. Data display added.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <main>
-        <section class="weather-info" id="mainCointainer">
+        <section class="weather-info" id="mainContainer">
             <div class="weather-info__search-view" id="weatherSearchView">
                 <label class="weather-info__search__label" for="searchInput">Check weather:</label>
                 <input type="text" id="searchInput">
@@ -25,7 +25,9 @@
 
                 <div class="weather-info__city">
                     <h1 id="weatherCity"></h1>
-                    <img id="weatherIcon" alt="" />
+                    <span>
+                        <img id="weatherIcon">
+                    </span>
                 </div>
 
                 <div class="weather-info__temperatures">
